crates/bevy_ecs_compile_fail_tests/tests/ui/query_lifetime_safety.stderr
error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/query_lifetime_safety.rs:17:39
   |
16 |             let data: &Foo = query.get(e).unwrap();
   |                              ----- immutable borrow occurs here
17 |             let mut data2: Mut<Foo> = query.get_mut(e).unwrap();
   |                                       ^^^^^^^^^^^^^^^^ mutable borrow occurs here
18 |             assert_eq!(data, &mut *data2); // oops UB
   |             ----------------------------- immutable borrow later used here

error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/query_lifetime_safety.rs:23:30
   |
22 |             let mut data2: Mut<Foo> = query.get_mut(e).unwrap();
   |                                       ----- mutable borrow occurs here
23 |             let data: &Foo = query.get(e).unwrap();
   |                              ^^^^^ immutable borrow occurs here
24 |             assert_eq!(data, &mut *data2); // oops UB
   |                                    ----- mutable borrow later used here

error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/query_lifetime_safety.rs:30:39
   |
29 |             let data: &Foo = query.get_component::<Foo>(e).unwrap();
   |                              ----- immutable borrow occurs here
30 |             let mut data2: Mut<Foo> = query.get_component_mut(e).unwrap();
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
31 |             assert_eq!(data, &mut *data2); // oops UB
   |             ----------------------------- immutable borrow later used here

error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/query_lifetime_safety.rs:37:30
   |
36 |             let mut data2: Mut<Foo> = query.get_component_mut(e).unwrap();
   |                                       ----- mutable borrow occurs here
37 |             let data: &Foo = query.get_component::<Foo>(e).unwrap();
   |                              ^^^^^ immutable borrow occurs here
38 |             assert_eq!(data, &mut *data2); // oops UB
   |                                    ----- mutable borrow later used here

error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/query_lifetime_safety.rs:43:39
   |
42 |             let data: &Foo = query.single();
   |                              ----- immutable borrow occurs here
43 |             let mut data2: Mut<Foo> = query.single_mut();
   |                                       ^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
44 |             assert_eq!(data, &mut *data2); // oops UB
   |             ----------------------------- immutable borrow later used here

error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/query_lifetime_safety.rs:49:30
   |
48 |             let mut data2: Mut<Foo> = query.single_mut();
   |                                       ----- mutable borrow occurs here
49 |             let data: &Foo = query.single();
   |                              ^^^^^ immutable borrow occurs here
50 |             assert_eq!(data, &mut *data2); // oops UB
   |                                    ----- mutable borrow later used here

error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/query_lifetime_safety.rs:55:39
   |
54 |             let data: &Foo = query.get_single().unwrap();
   |                              ----- immutable borrow occurs here
55 |             let mut data2: Mut<Foo> = query.get_single_mut().unwrap();
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
56 |             assert_eq!(data, &mut *data2); // oops UB
   |             ----------------------------- immutable borrow later used here

error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/query_lifetime_safety.rs:61:30
   |
60 |             let mut data2: Mut<Foo> = query.get_single_mut().unwrap();
   |                                       ----- mutable borrow occurs here
61 |             let data: &Foo = query.get_single().unwrap();
   |                              ^^^^^ immutable borrow occurs here
62 |             assert_eq!(data, &mut *data2); // oops UB
   |                                    ----- mutable borrow later used here

error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/query_lifetime_safety.rs:67:39
   |
66 |             let data: &Foo = query.iter().next().unwrap();
   |                              ----- immutable borrow occurs here
67 |             let mut data2: Mut<Foo> = query.iter_mut().next().unwrap();
   |                                       ^^^^^^^^^^^^^^^^ mutable borrow occurs here
68 |             assert_eq!(data, &mut *data2); // oops UB
   |             ----------------------------- immutable borrow later used here

error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/query_lifetime_safety.rs:73:30
   |
72 |             let mut data2: Mut<Foo> = query.iter_mut().next().unwrap();
   |                                       ----- mutable borrow occurs here
73 |             let data: &Foo = query.iter().next().unwrap();
   |                              ^^^^^ immutable borrow occurs here
74 |             assert_eq!(data, &mut *data2); // oops UB
   |                                    ----- mutable borrow later used here

error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/query_lifetime_safety.rs:81:13
   |
80 |             query.iter().for_each(|data| opt_data = Some(data));
   |             ----- immutable borrow occurs here
81 |             query.iter_mut().for_each(|data| opt_data_2 = Some(data));
   |             ^^^^^^^^^^^^^^^^ mutable borrow occurs here
82 |             assert_eq!(opt_data.unwrap(), &mut *opt_data_2.unwrap()); // oops UB
   |                        -------- immutable borrow later used here

error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/query_lifetime_safety.rs:89:13
   |
88 |             query.iter_mut().for_each(|data| opt_data_2 = Some(data));
   |             ----- mutable borrow occurs here
89 |             query.iter().for_each(|data| opt_data = Some(data));
   |             ^^^^^ immutable borrow occurs here
90 |             assert_eq!(opt_data.unwrap(), &mut *opt_data_2.unwrap()); // oops UB
   |                                                 ---------- mutable borrow later used here
